<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_text">"Welcome! On Boarding Screen"</string>
    <string name="store_text">The Shoe Store</string>
    <string name="welcome_button">Check Out Instructions</string>
    <string name="text_welcome_instructions">Instructions onboarding screen</string>
    <string name="shoe_list_screen">Shoe List Screen</string>

    <string name="shoe_1_Price">The shoe price is KES 1000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoe_details">Add Shoe Detail</string>
    <string name="shoe_name">Enter Shoe Name</string>
    <string name="company">Enter Company Name</string>
    <string name="shoe_size">Enter Shoe Size</string>
    <string name="enter_description">Enter Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>


</resources>
